samples/_failures_safe/1761184757_067b07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_decc1fb1.c: In function ‘main’:
./samples/SAFE/__tmp_decc1fb1.c:162:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |         int from, to, weight
      |         ^~~
./samples/SAFE/__tmp_decc1fb1.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_decc1fb1.c:162:9: error: expected declaration or statement at end of input
